welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
do {
^Poucet:7: error: ';' expected but 'while' found.
} while(!sortieTrouvee) 
  ^Poucet:10: error: 'while' expected but '}' found.
}
^