welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
do {
  avance()
	if(estFaceMur){
  droite()
  for (nbpas <- 0 to 13 ){
    avance()}
} while(!sortieTrouvee)